dtDSL/dtDSL_ws_step_3/dtDSL_ws_step_3/DataTypeDSL/src-gen/com/innoq/dtdsl/parser/dtdslParser.java
// $ANTLR 3.0 ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g 2009-04-12 03:04:04

package com.innoq.dtdsl.parser;

import org.eclipse.emf.common.util.Enumerator;
import org.eclipse.emf.ecore.EObject;

import org.openarchitectureware.xtext.parser.impl.AntlrUtil;
import org.openarchitectureware.xtext.XtextFile;
import org.openarchitectureware.xtext.parser.impl.EcoreModelFactory;
import org.openarchitectureware.xtext.parser.ErrorMsg;
import org.openarchitectureware.xtext.parser.model.ParseTreeManagerNeu;
import org.openarchitectureware.xtext.parser.parsetree.Node;

import com.innoq.dtdsl.MetaModelRegistration;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class dtdslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_ID", "RULE_STRING", "RULE_INT", "RULE_WS", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "'primitiveDatatype'", "'{'", "'@type'", "'}'", "'datatype'", "'@description'", "'@version'", "'string'", "'char'", "'boolean'", "'short'", "'long'", "'float'", "'integer'", "'octet'"
    };
    public static final int RULE_ID=4;
    public static final int RULE_STRING=5;
    public static final int RULE_INT=6;
    public static final int RULE_WS=7;
    public static final int RULE_SL_COMMENT=9;
    public static final int EOF=-1;
    public static final int RULE_ML_COMMENT=8;

        public dtdslParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[13+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g"; }



    	private Token getLastToken() {
    		return input.LT(-1);
    	}

    	protected Object convert(Object arg) {
    		if (arg instanceof org.antlr.runtime.Token) {
    			Token t = (Token) arg;
    			String s = t.getText();
    			if (t.getType() == dtdslLexer.RULE_ID && s.startsWith("^")) {
    				return s.substring(1);
    			} else if (t.getType()==dtdslLexer.RULE_STRING) {
    				return s.substring(1,s.length()-1);
    			} else if (t.getType()==dtdslLexer.RULE_INT) {
    				return Integer.valueOf(s);
    			}
    			return s;
    		}
    		return arg;
    	}


    	private EcoreModelFactory factory = new EcoreModelFactory(MetaModelRegistration.getEPackage());
        private ParseTreeManagerNeu ptm = new ParseTreeManagerNeu();
    	private XtextFile xtextfile = MetaModelRegistration.getXtextFile();
    	
    	{
    		
    	}

    	public ParseTreeManagerNeu getResult() {
    		return ptm;
    	}

    	private List<ErrorMsg> errors = new ArrayList<ErrorMsg>();
    	public List<ErrorMsg> getErrors() {
    		return errors;
    	}

    	@Override
    	public void reportError(RecognitionException e) {
    		String msg = super.getErrorMessage(e,tokenNames);
    		errors.add(AntlrUtil.create(msg,e,tokenNames));
    		ptm.addError(msg, e);
    		// This doesn't work. ANTLR may simply report an superfluous token. In that case,
    		// two nodes will be finished instead of one.
    		// ptm.ruleFinished(null, end());
    	}

        private boolean skipCurrentToken;
        
    	@Override
    	protected boolean recoverFromMismatchedElement(IntStream arg0, RecognitionException arg1, BitSet arg2) {
    		skipCurrentToken = true;
    		return super.recoverFromMismatchedElement(arg0, arg1, arg2);
    	}



    // $ANTLR start parse
    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:101:1: parse returns [Node r] : result= ruleReusableDatatype EOF ;
    public Node parse() throws RecognitionException {
        Node r = null;
        int parse_StartIndex = input.index();
        EObject result = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return r; }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:102:3: (result= ruleReusableDatatype EOF )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:102:3: result= ruleReusableDatatype EOF
            {
            pushFollow(FOLLOW_ruleReusableDatatype_in_parse67);
            result=ruleReusableDatatype();
            _fsp--;
            if (failed) return r;
            if ( backtracking==0 ) {

              if (result != null)
                ptm.setModelElement(result);
              r = ptm.getCurrent();
              ptm.ruleFinished(result);
            }
            match(input,EOF,FOLLOW_EOF_in_parse78); if (failed) return r;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 1, parse_StartIndex); }
        }
        return r;
    }
    // $ANTLR end parse


    // $ANTLR start ruleReusableDatatype
    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:112:1: ruleReusableDatatype returns [EObject result] : (temp_primitivedatatype= rulePrimitiveDatatype | temp_datatype= ruleDatatype );
    public EObject ruleReusableDatatype() throws RecognitionException {
        EObject result = null;
        int ruleReusableDatatype_StartIndex = input.index();
        EObject temp_primitivedatatype = null;

        EObject temp_datatype = null;


        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:114:9: (temp_primitivedatatype= rulePrimitiveDatatype | temp_datatype= ruleDatatype )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==10) ) {
                alt1=1;
            }
            else if ( (LA1_0==14) ) {
                alt1=2;
            }
            else {
                if (backtracking>0) {failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("112:1: ruleReusableDatatype returns [EObject result] : (temp_primitivedatatype= rulePrimitiveDatatype | temp_datatype= ruleDatatype );", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:114:9: temp_primitivedatatype= rulePrimitiveDatatype
                    {
                    pushFollow(FOLLOW_rulePrimitiveDatatype_in_ruleReusableDatatype101);
                    temp_primitivedatatype=rulePrimitiveDatatype();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_primitivedatatype;
                    }

                    }
                    break;
                case 2 :
                    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:114:97: temp_datatype= ruleDatatype
                    {
                    pushFollow(FOLLOW_ruleDatatype_in_ruleReusableDatatype116);
                    temp_datatype=ruleDatatype();
                    _fsp--;
                    if (failed) return result;
                    if ( backtracking==0 ) {
                      result =temp_datatype;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 2, ruleReusableDatatype_StartIndex); }
        }
        return result;
    }
    // $ANTLR end ruleReusableDatatype


    // $ANTLR start rulePrimitiveDatatype
    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:116:1: rulePrimitiveDatatype returns [EObject result] : ( ( 'primitiveDatatype' ) ( RULE_ID ) ( '{' ) ( '@type' ) (temp_PrimitiveDatatypes= rulePrimitiveDatatypes ) ( '}' ) ) ;
    public EObject rulePrimitiveDatatype() throws RecognitionException {
        EObject result = null;
        int rulePrimitiveDatatype_StartIndex = input.index();
        Enumerator temp_PrimitiveDatatypes = null;


        boolean hasContent = false;
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:119:4: ( ( ( 'primitiveDatatype' ) ( RULE_ID ) ( '{' ) ( '@type' ) (temp_PrimitiveDatatypes= rulePrimitiveDatatypes ) ( '}' ) ) )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:119:4: ( ( 'primitiveDatatype' ) ( RULE_ID ) ( '{' ) ( '@type' ) (temp_PrimitiveDatatypes= rulePrimitiveDatatypes ) ( '}' ) )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "PrimitiveDatatype");
              			 
            }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:122:1: ( ( 'primitiveDatatype' ) ( RULE_ID ) ( '{' ) ( '@type' ) (temp_PrimitiveDatatypes= rulePrimitiveDatatypes ) ( '}' ) )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:122:2: ( 'primitiveDatatype' ) ( RULE_ID ) ( '{' ) ( '@type' ) (temp_PrimitiveDatatypes= rulePrimitiveDatatypes ) ( '}' )
            {
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:122:2: ( 'primitiveDatatype' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:122:3: 'primitiveDatatype'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,10,FOLLOW_10_in_rulePrimitiveDatatype144); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(0)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:128:1: ( RULE_ID )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:128:2: RULE_ID
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,RULE_ID,FOLLOW_RULE_ID_in_rulePrimitiveDatatype152); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                Token temp = getLastToken();
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(1)));
                factory.set(result,"name",convert(temp),false);
                ptm.ruleFinished(temp);
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:138:1: ( '{' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:138:2: '{'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,11,FOLLOW_11_in_rulePrimitiveDatatype160); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(2)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:144:1: ( '@type' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:144:2: '@type'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,12,FOLLOW_12_in_rulePrimitiveDatatype167); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(3)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:150:1: (temp_PrimitiveDatatypes= rulePrimitiveDatatypes )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:150:2: temp_PrimitiveDatatypes= rulePrimitiveDatatypes
            {
            if ( backtracking==0 ) {
              ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(4)));
            }
            pushFollow(FOLLOW_rulePrimitiveDatatypes_in_rulePrimitiveDatatype177);
            temp_PrimitiveDatatypes=rulePrimitiveDatatypes();
            _fsp--;
            if (failed) return result;
            if ( backtracking==0 ) {
              if (temp_PrimitiveDatatypes != null) {
                hasContent = true;
                factory.set(result,"type",convert(temp_PrimitiveDatatypes),false);
                ptm.ruleFinished(temp_PrimitiveDatatypes);
              } else {
                ptm.destroyNode();
              }

            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:161:1: ( '}' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:161:2: '}'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,13,FOLLOW_13_in_rulePrimitiveDatatype185); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(1)).eContents().get(1)).eContents().get(5)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }


            }

            if ( backtracking==0 ) {
              if (!hasContent)
                result = null;
            }

            }

        }
        catch (RecognitionException re) {
            if (!hasContent)
                result = null;
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( backtracking>0 ) { memoize(input, 3, rulePrimitiveDatatype_StartIndex); }
        }
        return result;
    }
    // $ANTLR end rulePrimitiveDatatype


    // $ANTLR start ruleDatatype
    // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:174:1: ruleDatatype returns [EObject result] : ( ( 'datatype' ) ( RULE_ID ) ( '{' ) ( '@description' ) ( RULE_STRING ) ( '@version' ) ( RULE_INT ) ( '}' ) ) ;
    public EObject ruleDatatype() throws RecognitionException {
        EObject result = null;
        int ruleDatatype_StartIndex = input.index();
        boolean hasContent = false;
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:177:4: ( ( ( 'datatype' ) ( RULE_ID ) ( '{' ) ( '@description' ) ( RULE_STRING ) ( '@version' ) ( RULE_INT ) ( '}' ) ) )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:177:4: ( ( 'datatype' ) ( RULE_ID ) ( '{' ) ( '@description' ) ( RULE_STRING ) ( '@version' ) ( RULE_INT ) ( '}' ) )
            {
            if ( backtracking==0 ) {

              				result = factory.create("", "Datatype");
              			 
            }
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:180:1: ( ( 'datatype' ) ( RULE_ID ) ( '{' ) ( '@description' ) ( RULE_STRING ) ( '@version' ) ( RULE_INT ) ( '}' ) )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:180:2: ( 'datatype' ) ( RULE_ID ) ( '{' ) ( '@description' ) ( RULE_STRING ) ( '@version' ) ( RULE_INT ) ( '}' )
            {
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:180:2: ( 'datatype' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:180:3: 'datatype'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,14,FOLLOW_14_in_ruleDatatype223); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(0)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:186:1: ( RULE_ID )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:186:2: RULE_ID
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,RULE_ID,FOLLOW_RULE_ID_in_ruleDatatype231); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                Token temp = getLastToken();
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(1)));
                factory.set(result,"name",convert(temp),false);
                ptm.ruleFinished(temp);
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:196:1: ( '{' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:196:2: '{'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,11,FOLLOW_11_in_ruleDatatype239); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(2)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:202:1: ( '@description' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:202:2: '@description'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,15,FOLLOW_15_in_ruleDatatype246); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(3)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:208:1: ( RULE_STRING )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:208:2: RULE_STRING
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,RULE_STRING,FOLLOW_RULE_STRING_in_ruleDatatype254); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                Token temp = getLastToken();
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(4)));
                factory.set(result,"description",convert(temp),false);
                ptm.ruleFinished(temp);
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:218:1: ( '@version' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:218:2: '@version'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,16,FOLLOW_16_in_ruleDatatype262); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(5)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:224:1: ( RULE_INT )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:224:2: RULE_INT
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,RULE_INT,FOLLOW_RULE_INT_in_ruleDatatype270); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                Token temp = getLastToken();
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(6)));
                factory.set(result,"version",convert(temp),false);
                ptm.ruleFinished(temp);
              }
            }

            }

            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:234:1: ( '}' )
            // ..//DataTypeDSL/src-gen//com/innoq/dtdsl/parser/dtdsl.g:234:2: '}'
            {
            if ( backtracking==0 ) {
              skipCurrentToken = false;
            }
            match(input,13,FOLLOW_13_in_ruleDatatype278); if (failed) return result;
            if ( backtracking==0 ) {
              if (!skipCurrentToken) {
                hasContent = true;
                ptm.createNode(((EObject)((EObject)((EObject)xtextfile.eContents().get(2)).eContents().get(1)).eContents().get(7)));
                ptm.ruleFinished(getLastToken());
              }
            }

            }


            }

            if ( backtracking==0 ) {
              if (!hasContent)
                result = null;
            }

            }
